# django

./: .gitignore  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  commit_template.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: checks.yml  dev_deploy.yml
mytodo/: settings.py  urls.py
todo/: models.py  urls.py  views.py
todo/migrations/: 0001_initial.py
todo/templates/todo/: done_list.html  todo_detail.html  todo_list.html  todo_post.html
todo/todo/: settings.py
